--- a/assets/css/now-ui-kit.css
+++ b/assets/css/now-ui-kit.css
@@ -7746,3 +7746,30 @@ Created using IcoMoon - icomoon.io
     -webkit-filter: grayscale(0);
     -webkit-transform: scale(1.01);
 }
+
+#overbox3 {
+    position: fixed;
+    bottom: 0px;
+    left: 0px;
+    width: 100%;
+    z-index: 999999;
+    display: block;
+}
+#infobox3 {
+    margin: auto;
+    position: relative;
+    top: 0px;
+    height: 58px;
+    width: 100%;
+    text-align:center;
+    background-color: #a83150;
+}
+#infobox3 p {
+    line-height:58px;
+    font-size:12px;
+    text-align:center;
+}
+#infobox3 p a {
+    margin-right:5px;
+    text-decoration: underline;
+}
