--- a/assets/css/now-ui-kit.css
+++ b/assets/css/now-ui-kit.css
@@ -96,7 +96,7 @@
 .bootstrap-switch .bootstrap-switch-handle-on.bootstrap-switch-brown,
 .bootstrap-switch .bootstrap-switch-handle-off.bootstrap-switch-brown {
     color: #fff;
-    background: #a83150;
+    background:#B00020;
 }
 
 .bootstrap-switch .bootstrap-switch-handle-on.bootstrap-switch-blue,
@@ -271,7 +271,7 @@
 }
 
 .bootstrap-switch.bootstrap-switch-on .bootstrap-switch-brown~.bootstrap-switch-default {
-    background-color: #a83150;
+    background-color:#B00020;
 }
 
 .bootstrap-switch.bootstrap-switch-on .bootstrap-switch-blue~.bootstrap-switch-default {
@@ -615,7 +615,7 @@
 
 .slider.slider-primary .noUi-connect,
 .slider.slider-primary.noUi-connect {
-    background-color: #a83150;
+    background-color:#B00020;
 }
 
 .slider.slider-primary.noUi-target {
@@ -623,7 +623,7 @@
 }
 
 .slider.slider-primary .noUi-handle {
-    background-color: #a83150;
+    background-color:#B00020;
 }
 
 .slider.slider-info .noUi-connect,
@@ -710,7 +710,7 @@
 }
 
 .datepicker.datepicker-primary {
-    background-color: #a83150;
+    background-color:#B00020;
 }
 
 .datepicker.datepicker-primary th,
@@ -720,11 +720,11 @@
 }
 
 .datepicker.datepicker-primary:after {
-    border-bottom-color: #a83150;
+    border-bottom-color:#B00020;
 }
 
 .datepicker.datepicker-primary.datepicker-orient-top:after {
-    border-top-color: #a83150;
+    border-top-color:#B00020;
 }
 
 .datepicker.datepicker-primary .dow {
@@ -755,7 +755,7 @@
 .datepicker.datepicker-primary table tr td.active.disabled div,
 .datepicker.datepicker-primary table tr td.active.disabled:hover div {
     background-color: #FFFFFF;
-    color: #a83150;
+    color:#B00020;
 }
 
 .datepicker.datepicker-primary table tr td.day:hover div,
@@ -826,7 +826,7 @@
 .datepicker.datepicker-primary table tr td span.active:hover[disabled],
 .datepicker.datepicker-primary table tr td span.active.disabled[disabled],
 .datepicker.datepicker-primary table tr td span.active.disabled:hover[disabled] {
-    color: #a83150;
+    color:#B00020;
 }
 
 .datepicker-inline {
@@ -941,7 +941,7 @@
 }
 
 .datepicker th {
-    color: #a83150;
+    color:#B00020;
 }
 
 .table-condensed>tbody>tr>td,
@@ -1167,7 +1167,7 @@
 .datepicker table tr td.active:hover div,
 .datepicker table tr td.active.disabled div,
 .datepicker table tr td.active.disabled:hover div {
-    background-color: #a83150;
+    background-color:#B00020;
     color: #FFFFFF;
     box-shadow: 0px 1px 10px 0px rgba(0, 0, 0, 0.2);
 }
@@ -1192,7 +1192,7 @@
 .datepicker table tr td.active:hover[disabled] div,
 .datepicker table tr td.active.disabled[disabled] div,
 .datepicker table tr td.active.disabled:hover[disabled] div {
-    background-color: #a83150;
+    background-color:#B00020;
 }
 
 .datepicker table tr td.active:active,
@@ -1237,7 +1237,7 @@
 .datepicker table tr td span.active.disabled,
 .datepicker table tr td span.active.disabled:hover {
     color: #fff;
-    background-color: #a83150;
+    background-color:#B00020;
 }
 
 .datepicker table tr td span.active:hover,
@@ -1260,7 +1260,7 @@
 .datepicker table tr td span.active:hover[disabled],
 .datepicker table tr td span.active.disabled[disabled],
 .datepicker table tr td span.active.disabled:hover[disabled] {
-    background-color: #a83150;
+    background-color:#B00020;
     box-shadow: 0px 1px 10px 0px rgba(0, 0, 0, 0.2);
 }
 
@@ -1591,7 +1591,7 @@ fieldset[disabled] .navbar .navbar-nav>a.btn.active {
 }
 
 .btn-primary {
-    background-color: #a83150;
+    background-color:#B00020;
     color: #FFFFFF;
 }
 
@@ -1639,13 +1639,13 @@ fieldset[disabled] .btn-primary:focus,
 fieldset[disabled] .btn-primary.focus,
 fieldset[disabled] .btn-primary:active,
 fieldset[disabled] .btn-primary.active {
-    background-color: #a83150;
-    border-color: #a83150;
+    background-color:#B00020;
+    border-color:#B00020;
 }
 
 .btn-primary.btn-simple {
-    color: #a83150;
-    border-color: #a83150;
+    color:#B00020;
+    border-color:#B00020;
 }
 
 .btn-primary.btn-simple:hover,
@@ -1658,7 +1658,7 @@ fieldset[disabled] .btn-primary.active {
 }
 
 .btn-primary.btn-link {
-    color: #a83150;
+    color:#B00020;
 }
 
 .btn-primary.btn-link:hover,
@@ -1992,7 +1992,7 @@ fieldset[disabled] .btn-danger.active {
 
 .btn-neutral {
     background-color: #FFFFFF;
-    color: #a83150;
+    color:#B00020;
 }
 
 .btn-neutral:hover,
@@ -2309,7 +2309,7 @@ fieldset[disabled] .btn-link.active {
 }
 
 .form-control:focus {
-    border: 1px solid #a83150;
+    border: 1px solid#B00020;
     -webkit-box-shadow: none;
     box-shadow: none;
     outline: 0 !important;
@@ -2318,7 +2318,7 @@ fieldset[disabled] .btn-link.active {
 
 .form-control:focus+.input-group-addon,
 .form-control:focus~.input-group-addon {
-    border: 1px solid #a83150;
+    border: 1px solid#B00020;
     border-left: none;
     background-color: transparent;
 }
@@ -2549,7 +2549,7 @@ fieldset[disabled] .btn-link.active {
 
 .input-group-focus .input-group-addon {
     background-color: #FFFFFF;
-    border-color: #a83150;
+    border-color:#B00020;
 }
 
 .input-group-focus.form-group-no-border .input-group-addon {
@@ -2869,12 +2869,12 @@ textarea.form-control:active {
 }
 
 .progress-container.progress-primary .progress-bar {
-    background: #a83150;
+    background:#B00020;
 }
 
 .progress-container.progress-primary .progress-value,
 .progress-container.progress-primary .progress-badge {
-    color: #a83150;
+    color:#B00020;
 }
 
 .progress-container.progress-info .progress {
@@ -2958,8 +2958,8 @@ textarea.form-control:active {
 }
 
 .badge-primary {
-    border-color: #a83150;
-    color: #a83150;
+    border-color:#B00020;
+    color:#B00020;
 }
 
 .badge-info {
@@ -3060,8 +3060,8 @@ textarea.form-control:active {
 .pagination.pagination-primary .page-item.active>.page-link,
 .pagination.pagination-primary .page-item.active>.page-link:focus,
 .pagination.pagination-primary .page-item.active>.page-link:hover {
-    background-color: #a83150;
-    border-color: #a83150;
+    background-color:#B00020;
+    border-color:#B00020;
 }
 
 .pagination.pagination-warning .page-item.active>.page-link,
@@ -3093,7 +3093,7 @@ textarea.form-control:active {
 .pagination.pagination-neutral .page-item.active>.page-link:hover {
     background-color: #FFFFFF;
     border-color: #FFFFFF;
-    color: #a83150;
+    color:#B00020;
 }
 
 button,
@@ -3118,12 +3118,12 @@ small {
 }
 
 a {
-    color: #a83150;
+    color:#B00020;
 }
 
 a:hover,
 a:focus {
-    color: #a83150;
+    color:#B00020;
 }
 
 h1,
@@ -3222,7 +3222,7 @@ p.description {
 }
 
 .text-primary {
-    color: #a83150 !important;
+    color:#B00020 !important;
 }
 
 .text-info {
@@ -3260,12 +3260,12 @@ p.description {
 }
 
 .blockquote.blockquote-primary {
-    border-color: #a83150;
-    color: #a83150;
+    border-color:#B00020;
+    color:#B00020;
 }
 
 .blockquote.blockquote-primary small {
-    color: #a83150;
+    color:#B00020;
 }
 
 .blockquote.blockquote-danger {
@@ -3365,7 +3365,7 @@ body {
 }
 
 .separator.separator-primary {
-    background-color: #a83150;
+    background-color:#B00020;
 }
 
 .nav-pills .nav-item .nav-link {
@@ -3413,13 +3413,13 @@ body {
 .nav-pills.nav-pills-neutral .nav-item .nav-link.active:focus,
 .nav-pills.nav-pills-neutral .nav-item .nav-link.active:hover {
     background-color: #FFFFFF;
-    color: #a83150;
+    color:#B00020;
 }
 
 .nav-pills.nav-pills-primary .nav-item .nav-link.active,
 .nav-pills.nav-pills-primary .nav-item .nav-link.active:focus,
 .nav-pills.nav-pills-primary .nav-item .nav-link.active:hover {
-    background-color: #a83150;
+    background-color:#B00020;
 }
 
 .nav-pills.nav-pills-info .nav-item .nav-link.active,
@@ -3546,8 +3546,8 @@ body {
 }
 
 .nav-tabs.nav-tabs-primary>.nav-item>.nav-link.active {
-    border-color: #a83150;
-    color: #a83150;
+    border-color:#B00020;
+    color:#B00020;
 }
 
 .nav-tabs.nav-tabs-info>.nav-item>.nav-link.active {
@@ -3731,7 +3731,7 @@ body {
 }
 
 .bg-primary {
-    background-color: #a83150 !important;
+    background-color:#B00020 !important;
 }
 
 .bg-info {
@@ -4088,7 +4088,7 @@ img {
 }
 
 .popover.popover-primary {
-    background-color: #a83150;
+    background-color:#B00020;
 }
 
 .popover.popover-primary .popover-body {
@@ -4096,19 +4096,19 @@ img {
 }
 
 .popover.popover-primary.bs-popover-right .arrow:after {
-    border-right-color: #a83150;
+    border-right-color:#B00020;
 }
 
 .popover.popover-primary.bs-popover-top .arrow:after {
-    border-top-color: #a83150;
+    border-top-color:#B00020;
 }
 
 .popover.popover-primary.bs-popover-bottom .arrow:after {
-    border-bottom-color: #a83150;
+    border-bottom-color:#B00020;
 }
 
 .popover.popover-primary.bs-popover-left .arrow:after {
-    border-left-color: #a83150;
+    border-left-color:#B00020;
 }
 
 .popover.popover-primary .popover-header {
@@ -4879,7 +4879,7 @@ Created using IcoMoon - icomoon.io
 }
 
 .modal.modal-mini .modal-profile i {
-    color: #a83150;
+    color:#B00020;
     font-size: 21px;
 }
 
@@ -4888,7 +4888,7 @@ Created using IcoMoon - icomoon.io
 }
 
 .modal.modal-mini .modal-profile.modal-profile-primary {
-    background-color: #a83150;
+    background-color:#B00020;
 }
 
 .modal.modal-mini .modal-profile.modal-profile-danger {
@@ -4925,7 +4925,7 @@ Created using IcoMoon - icomoon.io
 }
 
 .modal.modal-primary .modal-content {
-    background-color: #a83150;
+    background-color:#B00020;
     color: #FFFFFF;
 }
 
@@ -5015,7 +5015,7 @@ Created using IcoMoon - icomoon.io
 }
 
 .card[data-background-color="orange"] {
-    background-color: #a83150;
+    background-color:#B00020;
 }
 
 .card[data-background-color="red"] {
@@ -5708,7 +5708,7 @@ Created using IcoMoon - icomoon.io
     top: 36%;
     left: 44%;
     font-size: 65px;
-    color: #a83150;
+    color:#B00020;
     padding: 1px;
 }
 
@@ -6016,7 +6016,7 @@ Created using IcoMoon - icomoon.io
         transition: all 0.5s cubic-bezier(0.685, 0.0473, 0.346, 1);
     }
     .sidebar-collapse .navbar-collapse:before {
-        background: #a83150;
+        background:#B00020;
         /* For browsers that do not support gradients */
         background: -webkit-linear-gradient(#a83150 0%, #000 80%);
         /* For Safari 5.1 to 6.0 */
@@ -6894,7 +6894,7 @@ Created using IcoMoon - icomoon.io
         transition: all 0.5s cubic-bezier(0.685, 0.0473, 0.346, 1);
     }
     .burger-menu .navbar-collapse:before {
-        background: #a83150;
+        background:#B00020;
         /* For browsers that do not support gradients */
         background: -webkit-linear-gradient(#a83150 0%, #000 80%);
         /* For Safari 5.1 to 6.0 */
@@ -7536,7 +7536,7 @@ Created using IcoMoon - icomoon.io
 
 .info .icon{
     font-size: xx-large;
-    color: #a83150;
+    color:#B00020;
 }
 
 .section-dark{
@@ -7575,7 +7575,7 @@ Created using IcoMoon - icomoon.io
 
 
 .border-primary-solid{
-    border: #a83150 1px solid;
+    border:#B00020 1px solid;
 }
 
 .border-white-solid{
@@ -7762,7 +7762,7 @@ Created using IcoMoon - icomoon.io
     height: 58px;
     width: 100%;
     text-align:center;
-    background-color: #a83150;
+    background-color:#B00020;
 }
 #infobox3 p {
     line-height:58px;
