Some design changes -- Web under construction

--- a/assets/css/now-ui-kit.css
+++ b/assets/css/now-ui-kit.css
@@ -7561,6 +7561,10 @@ Created using IcoMoon - icomoon.io
     margin-top: 40px;
 }
 
+.margin-top-100{
+    margin-top: 100px;
+}
+
 .margin-bottom-10{
     margin-bottom: 10px;
 }
